# System_Design_Estudos

./: README.md
email_queue/: README.md  app.py  config.py  consumer.py  producer.py  pyproject.toml
email_queue/templates/: index.html
url_encurtador/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
url_encurtador/alembic/: env.py
url_encurtador/alembic/versions/: 0001_create_urls_table.py
url_encurtador/app/: base62.py  cache.py  circuit_breaker.py  config.py  deps.py  limiter.py  logging_config.py  main.py  repository.py  schemas.py  snowflake.py
url_encurtador/app/db/: base.py  models.py
url_encurtador/app/routers/: urls.py
url_encurtador/app/tasks/: analytics.py  celery_app.py
url_encurtador/docs/: c4-container.md  c4-context.md
